--- a/index.html
+++ b/index.html
@@ -9,34 +9,35 @@
 <body>
   <!-- MAIN MENU -->
   <div id="menuScreen" class="screen">
-    <h1>PIXEL CAR SIM</h1>
-    <img id="mockup" src="/mnt/data/plan.jpg" alt="plan reference">
+    <h1>🚗 PIXEL CAR SIM</h1>
     <div class="menuBtns">
-      <button id="startBtn" class="btn">Start Simulation</button>
-      <button id="instrBtn" class="btn">View Instructions</button>
-      <button id="exitBtn" class="btn">Exit</button>
+      <button id="startBtn" class="btn">🎮 Start Simulation</button>
+      <button id="instrBtn" class="btn">📖 View Instructions</button>
     </div>
-    <div class="small">Pixel-style physics demo — use ArrowUp to accelerate, ArrowDown to brake.</div>
+    <div class="small">Pixel-style physics demo — use Arrow Keys to control your car!</div>
   </div>
 
   <!-- INSTRUCTIONS -->
   <div id="instructionsScreen" class="screen hidden">
-    <h2>Instructions</h2>
+    <h2>📖 Instructions</h2>
     <div class="panel">
-      <p>Goal: drive along a 300 m track made of 3 surfaces: <strong>ICE</strong>, <strong>SAND</strong>, <strong>WOOD</strong>.</p>
+      <p><strong>Goal:</strong> Drive along a 300 m track with 3 different surfaces!</p>
       <ul>
-        <li><strong>Ice</strong> — very low friction, slides easily.</li>
-        <li><strong>Sand</strong> — high friction, slows you down.</li>
-        <li><strong>Wood</strong> — medium friction.</li>
+        <li><strong>🧊 Ice</strong> — Very low friction (μ=0.1), slides easily!</li>
+        <li><strong>🏖️ Sand</strong> — High friction (μ=0.8), slows you down!</li>
+        <li><strong>🪵 Wood</strong> — Medium friction (μ=0.4), balanced surface!</li>
       </ul>
-      <p>Controls:
-        <strong>ArrowUp</strong> = Accelerate, <strong>ArrowDown</strong> = Brake,
-        <strong>Space</strong> = Pause/Resume, <strong>R</strong> = Restart.
-      </p>
-      <p>Physics panel shows speed, position, acceleration, friction, slope.</p>
+      <p><strong>Controls:</strong></p>
+      <ul>
+        <li><strong>↑ Arrow Up</strong> = Accelerate (adds +5 m/s²)</li>
+        <li><strong>↓ Arrow Down</strong> = Brake (adds -8 m/s²)</li>
+        <li><strong>Space</strong> = Pause/Resume simulation</li>
+        <li><strong>R</strong> = Restart from beginning</li>
+      </ul>
+      <p>Watch the physics panel to monitor your speed, position, acceleration, friction coefficient, and slope angle in real-time!</p>
     </div>
     <div class="row">
-      <button id="backFromInstr" class="btn">Back</button>
+      <button id="backFromInstr" class="btn">← Back</button>
     </div>
   </div>
 
@@ -45,25 +46,25 @@
     <div id="topBar">
       <div id="surfaceLabel">Surface: -</div>
       <div id="physicsPanel" class="panel">
-        Speed: <span id="speedVal">0.00</span> m/s<br>
-        Position: <span id="posVal">0.00</span> m<br>
-        Accel: <span id="accVal">0.00</span> m/s²<br>
-        μ: <span id="muVal">0.00</span><br>
-        Slope: <span id="slopeVal">0.0</span>°
+        <strong>Speed:</strong> <span id="speedVal">0.00</span> m/s<br>
+        <strong>Position:</strong> <span id="posVal">0.00</span> m<br>
+        <strong>Accel:</strong> <span id="accVal">0.00</span> m/s²<br>
+        <strong>μ (friction):</strong> <span id="muVal">0.00</span><br>
+        <strong>Slope:</strong> <span id="slopeVal">0.0</span>°
       </div>
       <div class="controls panel">
-        <button id="accelBtn" class="smallBtn">▲</button>
-        <button id="brakeBtn" class="smallBtn">▼</button>
-        <button id="pauseBtn" class="smallBtn">Pause</button>
-        <button id="restartBtn" class="smallBtn">Restart</button>
-        <button id="toMenuBtn" class="smallBtn">Menu</button>
+        <button id="accelBtn" class="smallBtn">▲ Accel</button>
+        <button id="brakeBtn" class="smallBtn">▼ Brake</button>
+        <button id="pauseBtn" class="smallBtn">⏸ Pause</button>
+        <button id="restartBtn" class="smallBtn">↻ Restart</button>
+        <button id="toMenuBtn" class="smallBtn">🏠 Menu</button>
       </div>
     </div>
 
     <div id="canvasWrap" class="panel">
       <canvas id="gameCanvas" width="900" height="240"></canvas>
       <div id="progressWrap">
-        <label for="progressBar">Progress</label>
+        <label for="progressBar">Track Progress (300m)</label>
         <progress id="progressBar" value="0" max="300"></progress>
       </div>
     </div>
@@ -71,17 +72,17 @@
 
   <!-- RESULTS -->
   <div id="resultsScreen" class="screen hidden">
-    <h2>Results</h2>
+    <h2>🏁 Results</h2>
     <div class="panel" id="resultsPanel">
-      <div>Final distance: <span id="finalDistance">0.00</span> m</div>
-      <div>Final speed: <span id="finalSpeed">0.00</span> m/s</div>
-      <div>Time duration: <span id="totalTime">0.00</span> s</div>
-      <div>Surface that slowed most: <span id="worstSurface">-</span></div>
+      <div>🎯 Final distance: <span id="finalDistance">0.00</span> m</div>
+      <div>⚡ Final speed: <span id="finalSpeed">0.00</span> m/s</div>
+      <div>⏱️ Time duration: <span id="totalTime">0.00</span> s</div>
+      <div>🐌 Most challenging surface: <span id="worstSurface">-</span></div>
     </div>
     <canvas id="resultsGraph" width="700" height="180"></canvas>
     <div class="row">
-      <button id="backToMenu" class="btn">Back to Menu</button>
-      <button id="restartFromResults" class="btn">Restart</button>
+      <button id="backToMenu" class="btn">🏠 Back to Menu</button>
+      <button id="restartFromResults" class="btn">↻ Restart</button>
     </div>
   </div>
 
