--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     
                     <div class="result-card">
                         <div class="result-label">Max Speed</div>
-                        <div class="result-value" id="maxSpeed">0.0 m/s</div>
+                        <div class="result-value" id="maxSpeedResult">0.0 m/s</div>
                     </div>
                 </div>
                 
