fixed maxspeed and added menu button

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
             <button class="control-btn" id="brakeBtn">⬇️ BRAKE (↓)</button>
             <button class="control-btn" id="pauseBtn">⏸️ PAUSE (SPACE)</button>
             <button class="control-btn" id="resetBtn">🔄 RESET (R)</button>
+            <button class="control-btn" id="menuBtn">🏠 MENU</button>
         </div>
         
         <div id="resultsScreen" class="screen hidden">
