--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="mainMenu" class="screen">
           <div class="menu-container">
             <h1 class="game-title">🏎️ SURFACE MATTERS</h1>
-            <p class="game-subtitle">A PHysics-Based Simulation on Car Movement and Friction</p>
+            <p class="game-subtitle">A Game Based-Simulation on Car Movement and Friction</p>
         
         <div class="menu-content">
             <h2>🎮 How to Play</h2>
